--- a/src/app/streams/streams.component.html
+++ b/src/app/streams/streams.component.html
@@ -1,1 +1,39 @@
-<p>streams works!</p>
+<div class="row">
+  <div class="col-xs-12 my-4">
+    <a
+      [routerLink]="['new']"
+      class="btn btn-outline-primary my-2"
+      data-toggle="modal"
+      data-target="#exampleModal"
+    >
+      Add Stream
+  </a>
+    <app-stream-list></app-stream-list>
+  </div>
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
