--- a/src/app/events/event-item/event-item.component.html
+++ b/src/app/events/event-item/event-item.component.html
@@ -1,1 +1,7 @@
-<p>event-item works!</p>
+<div class="carousel-item active">
+  <img src="https://marketplace.canva.com/EAFQZXCxgBc/1/0/1600w/canva-grey-modern-merry-christmas-banner-7-b5KFykqP4.jpg" class="d-block w-100" alt="Christmas" />
+  <div class="carousel-caption d-none d-md-block">
+    <h5>{{ event.title }}</h5>
+    <p>{{ event.description }}</p>
+  </div>
+</div>
